# handsome

./: .gitignore  .pre-commit-config.yaml  bot.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml
handsome/: __init__.py  bot.py
