[tool.poetry]
name = "handsome"
version = "0.1.0"
description = "discord bot for handsome boys"
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]

[tool.poetry.scripts]
bot = "handsome:main"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
pydantic = "^1.9.1"
aioredis = "^2.0.0"
webcolors = "^1.11.1"
"discord.py" = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.10.1"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
pyupgrade = "^2.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
