[tool.poetry]
name = "handsome"
version = "0.1.0"
description = "discord bot for handsome boys"
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]

[tool.poetry.scripts]
bot = "handsome:main"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
pydantic = "^1.8.2"
aioredis = "^2.0.1"
webcolors = "^1.11.1"
"discord.py" = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^23.3"
isort = "^5.10.1"
pre-commit = "^3.2.2"
flake8 = "^4.0.1"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
