[tool.poetry]
name = "handsome"
version = "0.1.0"
description = "discord bot for handsome boys"
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]

[tool.poetry.scripts]
bot = "handsome:main"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
pydantic = "^1.10.7"
aioredis = "^2.0.1"
webcolors = "^1.13"
"discord.py" = "^2.2.2"

[tool.poetry.dev-dependencies]
black = "^23.3"
isort = "^5.12.0"
pre-commit = "^3.2.2"
flake8 = "^5.0.4"
pyupgrade = "^3.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
